--- a/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -57,18 +56,6 @@
             <Font size="16.0" style="Bold" />
          </font>
       </Label>
-      <ScrollPane fx:id="typesScrollPane" hbarPolicy="NEVER" prefHeight="200.0">
-         <content>
-            <HBox>
-               <children>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </VBox>
-               </children>
-            </HBox>
-         </content>
-      </ScrollPane>
+      <ScrollPane fx:id="typesScrollPane" hbarPolicy="NEVER" prefHeight="200.0" />
    </children>
 </VBox>
