--- a/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
@@ -11,29 +11,15 @@
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox fx:id="unitsBox">
-         <children>
-            <Label onMouseClicked="#listAllPopulation" text="Inventory">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-               <padding>
-                  <Insets bottom="10.0" />
-               </padding>
-            </Label>
-            <Label fx:id="allLabel" onMouseClicked="#listAllPopulation" text="All" textFill="#274fee" underline="true">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets left="5.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="5.0" />
-               </padding>
-            </Label>
-         </children>
-      </VBox>
+      <Label onMouseClicked="#listAllPopulation" text="Inventory">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
+      </Label>
+      <VBox fx:id="unitsBox" />
       <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <children>
