--- a/database_mockup/src/animalkeeping/ui/fxml/PersonsView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/PersonsView.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -29,44 +24,41 @@
                            <content>
                               <VBox maxHeight="-Infinity" prefHeight="250.0">
                                  <children>
-                                    <GridPane alignment="CENTER_LEFT" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" prefWidth="174.0" vgap="5.0">
+                                    <GridPane alignment="CENTER_LEFT" hgap="5.0" maxHeight="-Infinity" prefWidth="588.0" vgap="10.0">
                                       <columnConstraints>
-                                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="275.0" />
+                                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="155.0" minWidth="80.0" prefWidth="142.0" />
+                                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="441.0" />
                                       </columnConstraints>
                                       <rowConstraints>
                                         <RowConstraints />
                                         <RowConstraints />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                                        <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="NEVER" />
+                                          <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                                          <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                                          <RowConstraints />
+                                          <RowConstraints />
                                       </rowConstraints>
                                        <children>
                                           <Label text="First name" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
                                           <Label text="Last name" GridPane.rowIndex="3" />
-                                          <Label text="email" GridPane.rowIndex="4" />
+                                          <Label text="E-mail" GridPane.rowIndex="4" />
                                           <Label text="Person ID" GridPane.rowIndex="1" />
-                                          <Label text="Database User Name" GridPane.rowIndex="5" />
-
-                                           <TextField fx:id="idField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="idTextField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                                          <TextField fx:id="firstNameField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="first name textField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                                          <TextField fx:id="lastNameField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="last name textField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
-                                          <TextField fx:id="emailField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="email textField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
-                                          <TextField fx:id="databaseUserField" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="databaseUser textField" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                                          <Label text="Database login" GridPane.rowIndex="5" />
+                                          <Label fx:id="idLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                                          <Label fx:id="firstnameLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
+                                          <Label fx:id="lastnameLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
+                                          <Label fx:id="emailLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
+                                          <Label fx:id="usernameLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5" />
+                                          <Label text="Database function" GridPane.rowIndex="6" />
+                                          <Label fx:id="userroleLabel" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="6" />
                                        </children>
                                        <VBox.margin>
                                           <Insets />
                                        </VBox.margin>
                                     </GridPane>
-                                    <HBox alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="29.0" prefWidth="598.0" spacing="5.0">
-                                       <children>
-                                          <Button mnemonicParsing="false" text="edit" />
-                                          <Button mnemonicParsing="false" text="delete" />
-                                       </children>
-                                    </HBox>
                                  </children>
                                  <padding>
-                                    <Insets bottom="10.0" />
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
                                  <opaqueInsets>
                                     <Insets />
@@ -75,18 +67,9 @@
                            </content>
                         </Tab>
                         <Tab closable="false" text="Treatments">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="250.0" prefWidth="200.0">
-                                 <children>
-                                    <TableView fx:id="treatmentTable" layoutX="41.0" layoutY="-36.0" prefHeight="155.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                          </content>
+                           <content>
+                              <VBox fx:id="treatmentTableBox" prefHeight="200.0" prefWidth="100.0" />
+                           </content>
                         </Tab>
                         <Tab closable="false" text="Timeline">
                            <content>
