[fxml] tiny layout fixes

--- a/database_mockup/src/animalkeeping/ui/fxml/TreatmentsView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/TreatmentsView.fxml
@@ -44,7 +44,7 @@
                                     <Label text="ID:" GridPane.rowIndex="1" />
                                     <Label fx:id="idLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                     <Label fx:id="nameLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label fx:id="licenceLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label fx:id="licenseLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     <Label fx:id="descriptionLabel" GridPane.columnIndex="1" GridPane.rowIndex="5" GridPane.rowSpan="2" />
                                     <Label text="Is final:" GridPane.rowIndex="4" />
                                     <Label fx:id="isFinalLabel" GridPane.columnIndex="1" GridPane.rowIndex="4" />
