--- a/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
@@ -56,6 +56,6 @@
             <Font size="16.0" style="Bold" />
          </font>
       </Label>
-      <ScrollPane fx:id="typesScrollPane" hbarPolicy="NEVER" prefHeight="200.0" />
+      <ScrollPane fx:id="typesScrollPane" hbarPolicy="NEVER" />
    </children>
 </VBox>
