--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -37,11 +37,7 @@
         </Menu>
             <Menu mnemonicParsing="false" text="View">
               <items>
-                <MenuItem mnemonicParsing="false" onAction="#refreshView" text="refresh">
-                     <accelerator>
-                        <KeyCodeCombination alt="UP" code="R" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-                     </accelerator>
-                  </MenuItem>
+                <MenuItem fx:id="refreshItem" mnemonicParsing="false" onAction="#refreshView" text="refresh" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Misc. entities">
